<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/scrollView_step_long_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="4dp"

                android:layout_marginStart="@dimen/activity_horizontal_margin_small"
                android:layout_marginEnd="@dimen/activity_horizontal_margin_small">

                <com.google.android.exoplayer2.ui.SimpleExoPlayerView
                    android:id="@+id/playerView"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/video_height"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/no_video_holder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:padding="4dp"
                        android:layout_marginTop="4dp"

                        android:gravity="center_horizontal"
                        android:text="@string/no_video" />
                    <android.support.v7.widget.AppCompatImageView
                        android:id="@+id/iv_step_detail_noVideo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        app:srcCompat="@drawable/ic_no_video" />

                </LinearLayout>


                <TextView
                    android:id="@+id/step_long_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorButtonIngredients"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    tools:text="@string/step_long_description"
                    android:gravity="center_horizontal"
                    android:padding="4dp"

                    />


            </LinearLayout>


        </android.support.v4.widget.NestedScrollView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="4dp"
            android:layout_alignParentBottom="true">
            <Button
                android:id="@+id/bt_recycler_previous"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_step_previous"
                android:textColor="@color/white"
                android:background="@color/secondary_text"/>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/secondary_text" />
            <Button
                android:id="@+id/bt_recycler_next"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_step_next"
                android:textColor="@color/white"
                android:background="@color/colorPrimary"/>

        </LinearLayout>
    </RelativeLayout>




</FrameLayout>

